--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-script: python test_duviz.py
+before_install:
+  - pip install -U pip
+  - pip install -U pytest
+script: pytest test_duviz.py
