--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -7,9 +7,8 @@ name: Lint and Test
 
 on:
   push:
-    branches: [ master ]
+    branches: ["main", "master"]
   pull_request:
-    branches: [ master ]
 
 jobs:
   build:
