--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,8 @@ repos:
     hooks:
     -   id: flake8
         args: [--max-line-length=120]
+
+-   repo: https://github.com/akaihola/darker
+    rev: 1.5.1
+    hooks:
+    -   id: darker
