--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,7 @@ repos:
     rev: 1.5.1
     hooks:
     -   id: darker
+        additional_dependencies:
+            # Workaround for https://github.com/akaihola/darker/issues/403
+            # TODO: remove again when darker 1.6.0 is available
+            - black<22.12.0
